Corrected % issue and display overflowing vertically

--- a/style.css
+++ b/style.css
@@ -186,7 +186,6 @@ body {
 }
 
 .calculator__display_result {
-    height: 1em;
     font-size: 2.5em;
 }
 
